@@ -38,27 +38,6 @@ in other Slurm functions used by the plugin.</p>
 <span class="commandline">src/plugins/jobcomp/none/jobcomp_none.c</span>
 for sample implementations of a Slurm job completion logging plugin.</p>
 
-<h2>Data Objects</h2>
-<p>The implementation must maintain (though not necessarily directly export) an
-enumerated <span class="commandline">errno</span>  to allow Slurm to discover
-as practically as possible the reason for any failed API call. Plugin-specific enumerated
-integer values should be used when appropriate. It is desirable that these values
-be mapped into the range ESLURM_JOBCOMP_MIN and ESLURM_JOBCOMP_MAX
-as defined in <span class="commandline">slurm/slurm_errno.h</span>.
-The error number should be returned by the function
-<a href="#get_errno"><span class="commandline">slurm_jobcomp_get_errno()</span></a>
-and this error number can be converted to an appropriate string description using the
-<a href="#strerror"><span class="commandline">slurm_jobcomp_strerror()</span></a>
-function described below.</p>
-
-<p>These values must not be used as return values in integer-valued functions
-in the API. The proper error return value from integer-valued functions is SLURM_ERROR.
-The implementation should endeavor to provide useful and pertinent information by
-whatever means is practical.
-Successful API calls are not required to reset any errno to a known value. However,
-the initial value of any errno, prior to any error condition arising, should be
-SLURM_SUCCESS. </p>
-
 <h2>API Functions</h2>
 <p>The following functions must appear. Functions which are not implemented should be stubbed.</p>
 
@@ -106,20 +85,6 @@ job record as defined in <i>src/slurmctld/slurmctld.h</i></p>
 the plugin should return SLURM_ERROR and set the errno to an appropriate value
 to indicate the reason for failure.</p>
 
-<a name="get_errno"><p class="commandline">int slurm_jobcomp_get_errno (void);</p></a>
-<p style="margin-left:.2in"><b>Description</b>: Return the number of a
-job completion logger specific error.</p>
-<p style="margin-left:.2in"><b>Arguments</b>: None</p>
-<p style="margin-left:.2in"><b>Returns</b>: Error number for the last failure encountered by the job completion logging plugin.</p>
-
-<p class="commandline"><a name="strerror">const char *slurm_jobcomp_strerror(int errnum);</a></p>
-<p style="margin-left:.2in"><b>Description</b>: Return a string description of a job completion logger specific error code.</p>
-<p style="margin-left:.2in"><b>Arguments</b>:
-<span class="commandline"> errnum</span>&nbsp; &nbsp;&nbsp;(input) a job completion logger
-specific error code.</p>
-<p style="margin-left:.2in"><b>Returns</b>: Pointer to string describing the error
-or NULL if no description found in this plugin.</p>
-
 <p class="commandline">
 List slurm_jobcomp_get_jobs(acct_job_cond_t *job_cond);</a></p>
 <p style="margin-left:.2in"><b>Description</b>: Get completed job info from
@@ -145,6 +110,6 @@ void slurm_jobcomp_archive(List selected_parts, void *params)
 <p style="margin-left:.2in"><b>Returns</b>: None</p>
 
 
-<p style="text-align:center;">Last modified 6 June 2018</p>
+<p style="text-align:center;">Last modified 7 March 2019</p>
 
 <!--#include virtual="footer.txt"-->
