@@ -55,8 +55,6 @@
 typedef struct slurm_jobcomp_ops {
 	int          (*set_loc)   ( char *loc );
 	int          (*job_write) ( struct job_record *job_ptr);
-	int          (*sa_errno)  ( void );
-	char *       (*job_strerror)  ( int errnum );
 	List         (*get_jobs)  ( slurmdb_job_cond_t *params );
 	int          (*archive)   ( slurmdb_archive_cond_t *params );
 } slurm_jobcomp_ops_t;
@@ -68,8 +66,6 @@ typedef struct slurm_jobcomp_ops {
 static const char *syms[] = {
 	"slurm_jobcomp_set_location",
 	"slurm_jobcomp_log_record",
-	"slurm_jobcomp_get_errno",
-	"slurm_jobcomp_strerror",
 	"slurm_jobcomp_get_jobs",
 	"slurm_jobcomp_archive"
 };
@@ -178,36 +174,6 @@ g_slurm_jobcomp_write(struct job_record *job_ptr)
 		error ("slurm_jobcomp plugin context not initialized");
 		retval = ENOENT;
 	}
-	slurm_mutex_unlock( &context_lock );
-	return retval;
-}
-
-extern int
-g_slurm_jobcomp_errno(void)
-{
-	int retval = SLURM_SUCCESS;
-
-	slurm_mutex_lock( &context_lock );
-	if ( g_context )
-		retval = (*(ops.sa_errno))();
-	else {
-		error ("slurm_jobcomp plugin context not initialized");
-		retval = ENOENT;
-	}
-	slurm_mutex_unlock( &context_lock );
-	return retval;
-}
-
-extern char *
-g_slurm_jobcomp_strerror(int errnum)
-{
-	char *retval = NULL;
-
-	slurm_mutex_lock( &context_lock );
-	if ( g_context )
-		retval = (*(ops.job_strerror))(errnum);
-	else
-		error ("slurm_jobcomp plugin context not initialized");
 	slurm_mutex_unlock( &context_lock );
 	return retval;
 }
