@@ -101,21 +101,6 @@ storage_field_t jobcomp_table_fields[] = {
 	{ NULL, NULL}
 };
 
-
-/* Type for error string table entries */
-typedef struct {
-	int xe_number;
-	char *xe_message;
-} slurm_errtab_t;
-
-static slurm_errtab_t slurm_errtab[] = {
-	{0, "No error"},
-	{-1, "Unspecified error"}
-};
-
-/* A plugin-global errno. */
-static int plugin_errno = SLURM_SUCCESS;
-
 /* File descriptor used for logging */
 static pthread_mutex_t  jobcomp_lock = PTHREAD_MUTEX_INITIALIZER;
 
@@ -170,24 +155,6 @@ static char *_get_group_name(uint32_t group_id)
 	slurm_mutex_unlock(&jobcomp_lock);
 
 	return ret_name;
-}
-
-/*
- * Linear search through table of errno values and strings,
- * returns NULL on error, string on success.
- */
-static char *_lookup_slurm_api_errtab(int errnum)
-{
-	char *res = NULL;
-	int i;
-
-	for (i = 0; i < sizeof(slurm_errtab) / sizeof(slurm_errtab_t); i++) {
-		if (slurm_errtab[i].xe_number == errnum) {
-			res = slurm_errtab[i].xe_message;
-			break;
-		}
-	}
-	return res;
 }
 
 /*
@@ -431,17 +398,6 @@ extern int slurm_jobcomp_log_record(struct job_record *job_ptr)
 	xfree(on_dup);
 
 	return rc;
-}
-
-extern int slurm_jobcomp_get_errno(void)
-{
-	return plugin_errno;
-}
-
-extern char *slurm_jobcomp_strerror(int errnum)
-{
-	char *res = _lookup_slurm_api_errtab(errnum);
-	return (res ? res : strerror(errnum));
 }
 
 /*
