@@ -97,16 +97,6 @@ int slurm_jobcomp_log_record ( struct job_record *job_ptr )
 	return SLURM_SUCCESS;
 }
 
-int slurm_jobcomp_get_errno( void )
-{
-	return SLURM_SUCCESS;
-}
-
-char *slurm_jobcomp_strerror( int errnum )
-{
-	        return NULL;
-}
-
 List slurm_jobcomp_get_jobs(void *job_cond)
 {
 	return NULL;
