@@ -93,6 +93,8 @@ documents those changes that are of interest to users and administrators.
  -- Execute Epilog on nodes reliquished from job (i.e. job resized).
  -- Rename burst_buffer/cray plugin to burst_buffer/datawarp.
  -- X11 Forwarding - reimplement using new internal network forwarding RPCs.
+ -- Remove slurm_jobcomp_get_errno and slurm_jobcomp_strerror from jobcomp
+    plugin API.
 
 * Changes in Slurm 19.05.0pre1
 ==============================
